--- a/docs/schema/yaml/parsers/string.yaml
+++ b/docs/schema/yaml/parsers/string.yaml
@@ -8,13 +8,6 @@ description: |
   It is currently only useful if you need to read files with a non-unicode encoding.
   Otherwise, while it is possible to declare your own, it would be equivalent to the default one.
 
-  **Example:**
-  ```yaml
-  name: shiftJisString
-  type: string
-  convertFromCharset: "Shift_JIS"
-  ```
-
   **Default instance**
   A default instance of this parser is already automatically created as such:
   ```yaml
@@ -22,6 +15,11 @@ description: |
   type: string
   convertFromCharset: ""
   ```
+examples:
+  - |
+    name: shiftJisString
+    type: string
+    convertFromCharset: "Shift_JIS"
 additionalProperties: false
 required:
   - name
