--- a/docs/schema/yaml/indexes/indexes.yaml
+++ b/docs/schema/yaml/indexes/indexes.yaml
@@ -5,27 +5,23 @@ title: Indexes
 description: |
   An index allows RODB to retrieve specific records using given search criterias.
   Indexes are especially useful when handling large input data or specific search requirements (full-text search for example).
-
-  **Root config key:** `indexes`
-
-  **Example:**
-  ```yaml
-  indexes:
-    - name: userId
-      type: map
-      input: users
-      properties:
-        - id
-    - name: name
-      type: sqlite
-      dsn: ":memory:"
-      input: users
-      properties:
-        - name: firstName
-          collate: nocase
-        - name: lastName
-          collate: nocase
-  ```
+examples:
+  - |
+    indexes:
+      - name: userId
+        type: map
+        input: users
+        properties:
+          - id
+      - name: name
+        type: sqlite
+        dsn: ":memory:"
+        input: users
+        properties:
+          - name: firstName
+            collate: nocase
+          - name: lastName
+            collate: nocase
 items:
   type: object
   anyOf:
