--- a/docs/schema/yaml/inputs/csv.yaml
+++ b/docs/schema/yaml/inputs/csv.yaml
@@ -5,30 +5,26 @@ title: CSV
 description: |
   A CSV input reads data from a CSV file. Each CSV row translates in one record.
   This input provides several settings described below.
-
-  **Examples:**
-  ```yaml
-  name: cities
-  type: csv
-  path: ./cities.csv
-  ignoreFirstRow: true
-  columns:
-    - name: name
-      parser: string
-    - name: prefecture
-      parser: string
-    - name: population
-      parser: integer
-  ```
-
-  ```yaml
-  name: countries
-  type: csv
-  path: ./cities.csv
-  ignoreFirstRow: true
-  autodetectColumns: true
-  delimiter: ","
-  ```
+examples:
+  - |
+    name: cities
+    type: csv
+    path: ./cities.csv
+    ignoreFirstRow: true
+    columns:
+      - name: name
+        parser: string
+      - name: prefecture
+        parser: string
+      - name: population
+        parser: integer
+  - |
+    name: countries
+    type: csv
+    path: ./cities.csv
+    ignoreFirstRow: true
+    autodetectColumns: true
+    delimiter: ","
 additionalProperties: false
 required:
   - name
