--- a/docs/schema/parsers/json.yaml
+++ b/docs/schema/parsers/json.yaml
@@ -10,7 +10,8 @@ description: |
 
   This parser is not a primitive parser, and thus cannot be used as a parameter in an output object.
 
-  **Default instance**
+  **Default instance:**
+
   A default instance of this parser is already automatically created as such:
   ```yaml
   name: json
