Adding missing schema types when using anyOf

--- a/docs/schema/inputs/inputs.yaml
+++ b/docs/schema/inputs/inputs.yaml
@@ -23,6 +23,7 @@ examples:
         type: json
         path: ./countries.json
 items:
+  type: object
   anyOf:
     - $ref: ./csv.yaml
     - $ref: ./json.yaml
