Validating the rule 'either http or https or both' in schema

--- a/docs/schema/services/http.yaml
+++ b/docs/schema/services/http.yaml
@@ -35,6 +35,12 @@ required:
   - name
   - type
   - routes
+if:
+  required:
+    - http
+else:
+  required:
+    - https
 properties:
   name:
     type: string
