--- a/docs/schema/indexes/indexes.yaml
+++ b/docs/schema/indexes/indexes.yaml
@@ -1,7 +1,7 @@
 $id: https://rodb.io/schema/indexes/indexes.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: array
-title: Indexes
+title: "Configuration - Indexes"
 description: |
   An index allows RODB to retrieve specific records using given search criterias.
   Indexes are especially useful when handling large input data or specific search requirements (full-text search for example).
