--- a/docs/schema/parsers/parsers.yaml
+++ b/docs/schema/parsers/parsers.yaml
@@ -1,7 +1,7 @@
 $id: https://rodb.io/schema/parsers/parsers.yaml
 $schema: http://json-schema.org/draft-07/schema#
 type: array
-title: Parsers
+title: "Configuration - Parsers"
 description: |
   In RODB, a parser is an object that allows you to convert a string value into another data type.
   There are many kind of parsers described below.
