--- a/examples/zip-codes-tokyo/Dockerfile
+++ b/examples/zip-codes-tokyo/Dockerfile
@@ -5,4 +5,4 @@ FROM $BASE_IMAGE
 COPY ./config.yaml /etc/rodb.yaml
 COPY ./*.csv /var
 
-CMD ["--config=/etc/rodb.yaml", "--verbose"]
+CMD ["--config=/etc/rodb.yaml", "--loglevel=debug"]
