Fixed menu links

--- a/docs/_data/menus/configuration.yaml
+++ b/docs/_data/menus/configuration.yaml
@@ -1,12 +1,12 @@
 class: "configuration-menu"
 items:
-  - href: "/configuration/inputs"
+  - href: "/rodb/configuration/inputs"
     title: "Inputs"
-  - href: "/configuration/parsers"
+  - href: "/rodb/configuration/parsers"
     title: "Parsers"
-  - href: "/configuration/indexes"
+  - href: "/rodb/configuration/indexes"
     title: "Indexes"
-  - href: "/configuration/services"
+  - href: "/rodb/configuration/services"
     title: "Services"
-  - href: "/configuration/outputs"
+  - href: "/rodb/configuration/outputs"
     title: "Outputs"
