--- a/docs/_data/menus/examples.yaml
+++ b/docs/_data/menus/examples.yaml
@@ -1,10 +1,10 @@
 class: "examples-menu"
 items:
-  - href: "/examples/countries"
+  - href: "/rodb/examples/countries"
     title: "Countries API"
-  - href: "/examples/people"
+  - href: "/rodb/examples/people"
     title: "People API"
-  - href: "/examples/japanese-dictionary"
+  - href: "/rodb/examples/japanese-dictionary"
     title: "Japanese dictionary API"
-  - href: "/examples/zip-codes-tokyo"
+  - href: "/rodb/examples/zip-codes-tokyo"
     title: "Tokyo's zip-codes API"
