--- a/docs/_data/menus/main.yaml
+++ b/docs/_data/menus/main.yaml
@@ -1,11 +1,11 @@
 items:
-  - href: "/"
+  - href: "/rodb/"
     title: "Get started"
-  - href: "/examples/countries"
+  - href: "/rodb/examples/countries"
     title: "Examples"
-    activePrefix: "/examples/"
-  - href: "/configuration/inputs"
+    activePrefix: "/rodb/examples/"
+  - href: "/rodb/configuration/inputs"
     title: "Configuration"
-    activePrefix: "/configuration/"
-  - href: "/changelog"
+    activePrefix: "/rodb/configuration/"
+  - href: "/rodb/changelog"
     title: "Changelog"
